--- a/game1.html
+++ b/game1.html
@@ -75,7 +75,7 @@ console.log(computerchose);
 function rock(){
         var url = "";
         if (computerchose == 0) url = "drawrock.html"
-        if (computerchose == 1) url = "paperrock - копия.html"
+        if (computerchose == 1) url = "rockpaper.html"
         if (computerchose == 2) url = "rockscissors.html"
         window.open(url)
 }
@@ -84,13 +84,13 @@ function paper(){
         var url = "";
         if (computerchose == 0) url = "paperrock.html"
         if (computerchose == 1) url = "drawpaper.html"
-        if (computerchose == 2) url = "scissorspaper-копия.html"
+        if (computerchose == 2) url = "paperscissors.html"
         window.open(url)
 }
 
 function scissors(){
         var url = "";
-        if (computerchose == 0) url = "rockscissors-копия.html"
+        if (computerchose == 0) url = "scissors.html"
         if (computerchose == 1) url = "scissorspaper.html"
         if (computerchose == 2) url = "sdrawscissors.html"
         window.open(url)
