--- a/game1.html
+++ b/game1.html
@@ -92,7 +92,7 @@ function scissors(){
         var url = "";
         if (computerchose == 0) url = "scissors.html"
         if (computerchose == 1) url = "scissorspaper.html"
-        if (computerchose == 2) url = "sdrawscissors.html"
+        if (computerchose == 2) url = "drawscissors.html"
         window.open(url)
 }
 
