--- a/rockscissors.html
+++ b/rockscissors.html
@@ -40,7 +40,7 @@ body {background-image: url(styles/images/background.jpg)}
 <img align="center"; id="again" src="styles\images\again.png">
 <img align="center"; id="exit" src="styles\images\exit.png">
 
-<img id="player" src="styles\images\paper.png">
+<img id="player" src="styles\images\scissors.png">
 <img id="computer" src="styles\images\rock.png">
 
 
