--- a/paperscissors.html
+++ b/paperscissors.html
@@ -40,8 +40,8 @@ body {background-image: url(styles/images/background.jpg)}
 <img align="center"; id="again" src="styles\images\again.png">
 <img align="center"; id="exit" src="styles\images\exit.png">
 
-<img id="player" src="styles\images\paper.png">
-<img id="computer" src="styles\images\scissors.png">
+<img id="player" src="styles\images\scissors.png">
+<img id="computer" src="styles\images\paper.png">
 
 <img align="center"; id="arrows2" src="styles\images\arrows2.png">
 
