--- a/scissorspaper.html
+++ b/scissorspaper.html
@@ -41,10 +41,9 @@ body {background-image: url(styles/images/background.jpg)}
 <img align="center"; id="exit" src="styles\images\exit.png">
 
 <img id="player" src="styles\images\paper.png">
-<img id="computer" src="styles\images\rock.png">
+<img id="computer" src="styles\images\scrissors.png">
 
 <img align="center"; id="arrows" src="styles\images\arrows.png">
-<img align="center"; id="arrows2" src="styles\images\arrows2.png">
 
 </body>
 </html>
