--- a/spockrock.html
+++ b/spockrock.html
@@ -44,7 +44,7 @@ body {background-image: url(styles/images/background.jpg)}
 <img id="computer" src="styles\images\spock.png">
 
 
-<img align="center"; id="arrows2" src="styles\images\arrows2.png">
+<img align="center"; id="arrows" src="styles\images\arrows.png">
 
 </body>
 </html>
