--- a/scissorspaper.html
+++ b/scissorspaper.html
@@ -41,7 +41,7 @@ body {background-image: url(styles/images/background.jpg)}
 <img align="center"; id="exit" src="styles\images\exit.png">
 
 <img id="player" src="styles\images\paper.png">
-<img id="computer" src="styles\images\scrissors.png">
+<img id="computer" src="styles\images\scissors.png">
 
 <img align="center"; id="arrows" src="styles\images\arrows.png">
 
