--- a/game1.html
+++ b/game1.html
@@ -90,7 +90,7 @@ function paper(){
 
 function scissors(){
         var url = "";
-        if (computerchose == 0) url = "scissorsrock.html"
+        if (computerchose == 0) url = "rockscissors.html"
         if (computerchose == 1) url = "paperscissors.html"
         if (computerchose == 2) url = "drawscissors.html"
         window.open(url)
