--- a/game2.html
+++ b/game2.html
@@ -51,13 +51,11 @@ body {background-image: url(styles/images/background.jpg)}
 	
 <div id="right">
 		<img align="center"; id="text2" src="styles\images\choose.png">
-		<img id="rock2" src="styles\images\rock.png">
-		<img id="scissors2" src="styles\images\scissors.png">
-		<img id="paper2" src="styles\images\paper.png">
-		<img id="lizard2" src="styles\images\lizard.png" usemap="#legushka">
-		<map name="legushka"><area href="game1.html" shape="default"></map>
-
-		<img id="spock2" src="styles\images\spock.png">
+		<img id="rock2" src="styles\images\rock.png" usemap="#rock"> <map name="rock"><area onclick="rock()" shape="default"></map>
+		<img id="scissors2" src="styles\images\scissors.png" usemap="#scissors"> <map name="scissors"><area onclick="scissors()" shape="default"></map>
+		<img id="paper2" src="styles\images\paper.png"  usemap="#paper"> <map name="paper"><area onclick="paper()" shape="default"></map>
+		<img id="lizard2" src="styles\images\lizard.png"  usemap="#lizard"> <map name="lizard"><area onclick="lizard()" shape="default"></map>
+		<img id="spock2" src="styles\images\spock.png"  usemap="#spock"> <map name="spock"><area onclick="spock()" shape="default"></map>
 	
 	</div>
 </div>
