--- a/game1.html
+++ b/game1.html
@@ -95,7 +95,7 @@ function rock(){
 	last = 0
 	
 	number = number + 1
-	
+	var computerchose = getRandomInt(3);
         window.open(url)
 }
 
@@ -112,7 +112,7 @@ function paper(){
 	last = 1
 	
 	number = number + 1
-	
+	var computerchose = getRandomInt(3);
         window.open(url)
 }
 
@@ -129,7 +129,7 @@ function scissors(){
 	last = 2
 	
 	number = number + 1
-	
+	var computerchose = getRandomInt(3);
         window.open(url)
 }
 
