--- a/game1.html
+++ b/game1.html
@@ -115,6 +115,7 @@ function rock(){
 	var computerchose = automatic_opponent(predictor(last, local));
         console.log(computerchose); 
         last = 0;
+	console.log(url);
         window.open(url);
 }
 
