--- a/game1.html
+++ b/game1.html
@@ -46,7 +46,11 @@ body {background-image: url(styles/images/background.jpg)}
         <div id="left">
                 <img align="center"; id="text1" src="styles\images\too.png">
 		
-                <>
+               <ul> 
+		<?php for($i=1;$i<=5;$i++){ ?>
+		<li>Menu Item <?php echo $i; ?></li>	 
+		<?php } ?>
+		</ul> 
 
 		
 	</div>
