--- a/game1.html
+++ b/game1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>rock paper scissors</title>
+<link rel="shortcut icon" href="lizard.ico" type="image/x-icon">
 <style>
 @font-face {
     font-family: "bennieb"; /* Гарнитура шрифта */
